codespan-reporting/tests/snapshots/term__empty_spans__no_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_no_color(&test_config())
---
note: middle

   ┌── hello:1:7 ───
   │
 1 │ Hello world!
   │       ^ middle
   │

note: end of line

   ┌── hello:1:13 ───
   │
 1 │ Hello world!
   │             ^ end of line
   │

note: end of file

   ┌── hello:2:11 ───
   │
 2 │ Bye world!
   │           ^ end of file
   │


