codespan-reporting/tests/snapshots/term__empty_spans__rich_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_color(&config)
---
{fg:Green bold bright}note{bold bright}: middle{/}

   {fg:Blue}┌{/}{fg:Blue}──{/} hello:1:7 {fg:Blue}───{/}
   {fg:Blue}│{/}
 {fg:Blue}1{/} {fg:Blue}│{/} Hello world!
   {fg:Blue}│{/}       {fg:Green}^ middle{/}
   {fg:Blue}│{/}

{fg:Green bold bright}note{bold bright}: end of line{/}

   {fg:Blue}┌{/}{fg:Blue}──{/} hello:1:13 {fg:Blue}───{/}
   {fg:Blue}│{/}
 {fg:Blue}1{/} {fg:Blue}│{/} Hello world!
   {fg:Blue}│{/}             {fg:Green}^ end of line{/}
   {fg:Blue}│{/}

{fg:Green bold bright}note{bold bright}: end of file{/}

   {fg:Blue}┌{/}{fg:Blue}──{/} hello:2:11 {fg:Blue}───{/}
   {fg:Blue}│{/}
 {fg:Blue}2{/} {fg:Blue}│{/} Bye world!
   {fg:Blue}│{/}           {fg:Green}^ end of file{/}
   {fg:Blue}│{/}


